--- a/src/App.css
+++ b/src/App.css
@@ -134,3 +134,60 @@
   background-color: blue;
   color: #ffffff;
 }
+
+.custom-select {
+  position: relative;
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 10px;
+}
+
+.select-header {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 8px;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.selected-option {
+  flex-grow: 1;
+}
+
+.dropdown-icon {
+  margin-left: 8px;
+}
+
+.dropdown-icon.open {
+  transform: rotate(180deg);
+}
+
+.options {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.option {
+  padding: 8px;
+  cursor: pointer;
+}
+
+.option:hover {
+  background-color: #f1f1f1;
+}
+
+.option.selected {
+  background-color: #ddd;
+}
