--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   background-color: #f2f2f2;
   padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .logo img {
@@ -137,9 +138,11 @@
 
 .custom-select {
   position: relative;
+  margin-bottom: 30px;
   display: inline-block;
   margin-top: 30px;
   margin-left: 10px;
+  float: left;
 }
 
 .select-header {
@@ -190,4 +193,147 @@
 
 .option.selected {
   background-color: #ddd;
+}
+
+.search {
+  float: left;
+  padding: 10px;
+  margin-left: 20px;
+  margin-top: 30px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  width: 200px;
+  margin-bottom: 20px;
+}
+
+.background-opacity {
+  position: fixed;
+  width: 100%;
+  min-height: 100%;
+  background: #000;
+  opacity: 0.7;
+  z-index: 1000000;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0px;
+}
+
+.App {
+  position: relative;
+}
+
+.modal-content {
+  position: absolute;
+  top: 50px;
+  width: 60%;
+  z-index: 10000000;
+  background: #ffffff;
+  margin: 0px auto;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+}
+.input-wrapper input,
+.input-wrapper select {
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.input-wrapper label {
+  margin-bottom: 10px;
+}
+
+.error {
+  color: red;
+  font-size: 14px;
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
+
+span.close {
+  font-weight: bold;
+  font-size: 30px;
+  float: right;
+  margin-top: -26px;
+  cursor: pointer;
+}
+
+.submit-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #8a2be2;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  transition: box-shadow 0.3s ease;
+  transform-style: preserve-3d;
+}
+
+.submit-button:hover {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  transform: translateZ(5px);
+}
+
+button.add-entry {
+  float: right;
+  margin-right: 20px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #156069;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  transition: box-shadow 0.3s ease;
+  transform-style: preserve-3d;
+  margin-top: 30px;
+}
+
+.dropdown-button {
+  background-color: transparent;
+  border: none;
+  position: relative;
+  width: 112px;
+  cursor: pointer;
+}
+
+.dropdown-button::after {
+  content: "";
+  position: absolute;
+  top: 3px;
+  right: 0.5rem;
+  border: solid #000;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 3px;
+  pointer-events: none;
+  transform: rotate(45deg);
+}
+
+.pagination .active {
+  background-color: rgb(90, 79, 100);
+  color: #ffffff;
+}
+
+.pagination li button {
+  cursor: pointer;
+  border-radius: 5px;
 }
